exp/compile_output
C:\Users\Eder.santos\workspace\Jabuti\exp\result\Piramide\traditional_mutants\int_piramide(int,int,int,int,int,int)\VDL_9\Piramide.java:10: error: bad operand types for binary operator '&&'
        if (base1 > 0 && base1 <= 15 && (base2 > 0 && base2 <= 15) && (base3 > 0 && base3 <= 15) && (l1 > 0 && l1 <= 15) && (0 && l2 <= 15) && (l3 > 0 && l3 <= 15)) {
                                                                                                                               ^
  first type:  int
  second type: boolean
1 error
